docs: Split and rewrite README